// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Должен вернуть объёмы двигателя из displacementTypes для марки BMW 1`] = `
Array [
  Object {
    "crossLinkText": "BMW 2.0л",
    "humanDisplacement": "2.0л",
    "key": "BMW_2.0",
    "params": Object {
      "displacement_from": 2000,
      "displacement_to": 2000,
    },
    "renderAtFooter": true,
    "value": 2000,
  },
  Object {
    "crossLinkText": "BMW 3.0л",
    "humanDisplacement": "3.0л",
    "key": "BMW_3.0",
    "params": Object {
      "displacement_from": 3000,
      "displacement_to": 3000,
    },
    "renderAtFooter": true,
    "value": 3000,
  },
  Object {
    "crossLinkText": "BMW 4.0л",
    "humanDisplacement": "4.0л",
    "key": "BMW_4.0",
    "params": Object {
      "displacement_from": 4000,
      "displacement_to": 4000,
    },
    "renderAtFooter": true,
    "value": 4000,
  },
]
`;

exports[`Должен вернуть трансмиссии из displacementTypes для марки BMW и модели 3ER 1`] = `
Array [
  Object {
    "crossLinkText": "BMW 3 серии 2.0л",
    "humanDisplacement": "2.0л",
    "key": "BMW_2.0",
    "params": Object {
      "displacement_from": 2000,
      "displacement_to": 2000,
    },
    "renderAtFooter": true,
    "value": 2000,
  },
  Object {
    "crossLinkText": "BMW 3 серии 3.0л",
    "humanDisplacement": "3.0л",
    "key": "BMW_3.0",
    "params": Object {
      "displacement_from": 3000,
      "displacement_to": 3000,
    },
    "renderAtFooter": true,
    "value": 3000,
  },
  Object {
    "crossLinkText": "BMW 3 серии 4.0л",
    "humanDisplacement": "4.0л",
    "key": "BMW_4.0",
    "params": Object {
      "displacement_from": 4000,
      "displacement_to": 4000,
    },
    "renderAtFooter": true,
    "value": 4000,
  },
]
`;
